fix(search.css): align clear button correctly

--- a/templates/shared/search.css
+++ b/templates/shared/search.css
@@ -53,7 +53,7 @@
 
 .clear-button {
   float: left;
-  height: 48px;
+  height: 40px;
   position: absolute;
   right: 13px;
   border: none;
